kubernetes/apps/default/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/controller: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/controller: home-assistant
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/home-assistant/home-assistant:2026.4.1@sha256:8848691147f01a6eee7753de2ade21b04d6168fcd2e2a7089f6f84e3b7b86960
          ports:
            - name: http
              containerPort: 8123
            - name: coiot
              containerPort: 5683
              protocol: UDP
          startupProbe:
            tcpSocket:
              port: 8123
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmpfs
              mountPath: /config/logs
              subPath: logs
            - name: tmpfs
              mountPath: /config/tts
              subPath: tts
            - name: tmpfs
              mountPath: /tmp
              subPath: tmp
        - name: code-server
          image: ghcr.io/coder/code-server:4.115.0@sha256:cbd5e05849367e521f774b760602cb9e0a8da1f159eaf89600490eec34129fe5
          args:
            - --auth
            - none
            - --disable-telemetry
            - --disable-update-check
            - --user-data-dir
            - /config/.code-server
            - --extensions-dir
            - /config/.code-server
            - --port
            - "12321"
            - /config
          ports:
            - name: code-server
              containerPort: 12321
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
        - name: tmpfs
          emptyDir: {}
